# hello_arm_rust

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
src/: main.rs
