[package]
name = "hello_arm"
version = "0.1.0"
edition = "2024"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
# reqwest = { version = "0.11", features = ["json"] }
# FIX openssl compile error
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }


[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
